adding sync-branches

--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: Sync Branches
+name: Sync Git Branches
 description: Syncs and merges provided downstream repo with the upstream repos. Fork of https://github.com/dabreadman/sync-upstream-repo.
 author: dchourasia
 
